<resources>
    <string name="app_name">Calculator</string>
    <string name="cancel">C</string>
    <string name="braсkets">( )</string>
    <string name="percent">%</string>
    <string name="division">/</string>
    <string name="multiplication">x</string>
    <string name="key_9">9</string>
    <string name="key_8">8</string>
    <string name="key_7">7</string>
    <string name="key_6">6</string>
    <string name="key_5">5</string>
    <string name="key_4">4</string>
    <string name="key_3">3</string>
    <string name="key_2">2</string>
    <string name="key_1">1</string>
    <string name="key_0">0</string>
    <string name="key_plus2"> +/- </string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_comma">,</string>
    <string name="key_result"> = </string>
    <string name="app_info">Информация</string>
    <string name="back_main_activity">вернуться</string>
</resources>